<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
	<TextView 
	    android:text="@string/app_name"
	      android:layout_width="match_parent"
   		  android:layout_height="wrap_content"
   		  android:textSize="50sp"
   		  android:background="@android:color/black"
   		  android:textColor="@android:color/white"
	    />
    <Button
        android:id="@+id/new_game_button"
        style="@style/ButtonText"
   
        android:layout_gravity="center_vertical|center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:background="@drawable/blue_button"
        android:onClick="handleAction"
        android:text="@string/new_game" />

    <Button
         android:layout_gravity="center_vertical|center_horizontal"
        android:id="@+id/high_scores_button"
        style="@style/ButtonText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:background="@drawable/blue_button"
        android:onClick="handleAction"
        android:text="@string/high_scores" />

    <Button
         android:layout_gravity="center_vertical|center_horizontal"
        android:id="@+id/exit_button"
        style="@style/ButtonText"
        android:layout_width="match_parent"
         android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:background="@drawable/blue_button"
        android:onClick="handleAction"
        android:text="@string/exit" />

</LinearLayout>