<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/level_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:text="@string/level" />

    <TextView
        android:id="@+id/lives_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/level_info"
        android:text="@string/lives" />

    <TextView
        android:id="@+id/points_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/lives_info"
        android:text="@string/points" />

    <View
        android:layout_below="@id/points_info"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        class="self.pingpong.view.GameView" />

</RelativeLayout>